# EIT-Device-Firmware

./: .gitignore  CMakeLists.txt  README.md  env.cmd  generate_makefiles.bat  generate_makefiles.sh  make_debug.bat  make_debug.sh  make_release.bat  make_release.sh  set_env.cmd
cmake/: arm-none-eabi.cmake  flash.cmake
drivers/boards/: CMakeLists.txt
drivers/boards/teensy_3.6/: CMakeLists.txt  board.c  board.h  pin_mux.c  pin_mux.h
drivers/cmsis/: CMakeLists.txt  Readme.md
drivers/cmsis/Core/Include/: cmsis_gcc.h
drivers/devices/MK66F18/: CMakeLists.txt  debug_helper.h  default_handlers.c
drivers/devices/MK66F18/arduino/: Makefile
drivers/devices/MK66F18/drivers/: fsl_pdb.h
drivers/devices/MK66F18/startup/: startup_baremetal.c
drivers/devices/MK66F18/utilities/: fsl_assert_simple.c
drivers/generic/: CMakeLists.txt  stdlib_stubs.c
drivers/segger/: CMakeLists.txt  HardFault_Handler.S  HardFault_Handler.c  SEGGER_SEMIHOST.c  svc_handler.S
ld/: MK66FX1M0xxx18.ld
src/: board.h  commands.h  eit.h  globals.h  main.cpp  setup.h  tests.h
tools/: wsl_set_gdb_host.sh
